# LegadoHOS

./: .gitattributes  .gitignore  .harmonyos-ai-workspace.manifest  .mcp.json  AGENTS.md  CLAUDE.md  build-profile.json5  full_dump_hos_20260625155422164.json  local.properties.example  package-lock.json  package.json  roles.md  simple_dump_hos_20260625155243339.txt  simple_dump_hos_20260625155446618.txt  simple_dump_hos_20260627125403667.txt  tools.md
.codex/: config.toml
.deveco/plans/: 1782568731883-kind-engine.md
.zcode/plans/: plan-sess_202d4a49-e939-405e-a54b-5f7a57c24445.md  plan-sess_46703a9a-fb21-4aff-bef8-039594311c62.md  plan-sess_8767d08b-77f8-4dcf-b479-2354a127a574.md
AppScope/: app.json5
doc/: cross-platform-development.md  design.md  requirement.md  rss_source.md  source.md  source_impl.md  verified_source.json  verified_source.md
doc/modules/: cloudbook-phase0-baseline.md  cloudbook-phase1-notes.md  cloudbook-phase2-notes.md  cloudbook-phase3-notes.md  cloudbook-phase4-notes.md  cloudbook-phase6-notes.md  cloudbook-phase7-notes.md  cloudbook.md  comic.md  localbook.md  online_book.md  replace_rule.md  search.md  share_import.md  sync.md  tts.md
doc/ref/: epub.md  font.md  pad.md  reader.md  select.md  tts.md
docs/reviews/: 2026-07-01-bookshelf-manage-gap.md  2026-07-01-full-code-review.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/types/libquickjs_bridge/: index.d.ts  oh-package.json5
libraries/quickjs/: BUILD.gn
libraries/quickjs/src/: napi_bridge.cpp
releases/: verified_source-v0.0.5.json
screenshot/: simple_dump_hos_20260710085917880.txt  simple_dump_hos_20260710085936551.txt  simple_dump_hos_20260710090052550.txt
scripts/: build.ps1  build.sh  guides-mcp.sh  practices-mcp.sh  push-tts-model.sh
test/: ai_source_generator.mjs  analyze_and_fix_css.mjs  analyze_new_sources.mjs  analyze_saved.mjs  apply_fixes.mjs  apply_fixes.py  compare_sources.mjs  deep_diagnose.mjs  deep_probe.mjs  diagnose.mjs  fix_6_sources.mjs  fix_all_sources.mjs  fix_css_selectors.mjs  fix_detailed.mjs  fix_sources.mjs  fix_webview.mjs  full_analysis.mjs  source.json  source_ai_generated.json  source_fixed.json  source_fixed_6.json  source_fixed_all.json  source_fixed_css.json  test_parser.mjs  try_search.mjs  validate_rules.mjs  verify_author.mjs  verify_source.mjs
tools/: check-ohpm-deps.sh  harmony-dev-cycle.sh  run-linter.sh
(+307 files in other folders)
